[package]
name = "user_lib"
version = "0.0.1"
authors = ["Chuan Wang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/MuoDoo/riscv", features = ["inline-asm"] } 

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []